# wgpu_glyph

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: clipping.rs  depth.rs  hello.rs  msaa.rs
src/: builder.rs  lib.rs  pipeline.rs  region.rs
src/pipeline/: cache.rs
src/shader/: fragment.frag  fragment.spv  glyph.wgsl  shader.wgsl  vertex.spv  vertex.vert
