[package]
name = "wgpu_glyph"
version = "0.11.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A fast text renderer for wgpu, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "wgpu", "text"]
repository = "https://github.com/hecrj/wgpu_glyph"
documentation = "https://docs.rs/wgpu_glyph"
readme = "README.md"

[dependencies]
glyph_brush = "0.7"
log = "0.4"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dependencies.wgpu]
version = "0.8"
# NB: wgpu switched the default shader translator to `naga` in in 0.8.0,
# but it currently produces syntax errors when translating this crate's shaders
# to GLSL for `gfx_backend_gl`.
# So, for now, tell it to use the legacy `spirv_cross` shader translator.
features = ["cross"] 

[dev-dependencies]
env_logger = "0.7"
winit = "0.24"
futures = "0.3"
