[package]
name = "wgpu_glyph"
version = "0.18.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A fast text renderer for wgpu, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "wgpu", "text"]
repository = "https://github.com/hecrj/wgpu_glyph"
documentation = "https://docs.rs/wgpu_glyph"
readme = "README.md"
resolver = "2"

[dependencies]
wgpu = "0.15"
glyph_brush = "0.7"
log = "0.4"

[dependencies.bytemuck]
version = "1.9"
features = ["derive"]

[dev-dependencies]
env_logger = "0.9"
winit = "0.27"
futures = "0.3"
