[package]
name = "wgpu_glyph"
version = "0.23.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2024"
description = "A fast text renderer for wgpu, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "wgpu", "text"]
repository = "https://github.com/hecrj/wgpu_glyph"
documentation = "https://docs.rs/wgpu_glyph"
readme = "README.md"

[dependencies]
wgpu = "26"
glyph_brush = "0.7"
log = "0.4"

[dependencies.bytemuck]
version = "1.9"
features = ["derive"]

[dev-dependencies]
env_logger = "0.10"
winit = "0.29"
futures = "0.3"
